--- a/contact.html
+++ b/contact.html
@@ -91,16 +91,18 @@
     <section class="contact-info">
         <div class="container">
             <div class="info-grid">
-                <div class="info-card" data-aos="fade-right">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <h3>Our Location</h3>
-                    <p>Federal Bank, Vallikavu Building<br>Kollam, Clappana</p>
-                </div>
+                                 <div class="info-card" data-aos="fade-right">
+                     <i class="fas fa-map-marker-alt"></i>
+                     <h3>Our Locations</h3>
+                     <p>FixLab IT Support<br>Technopark Back Gate side, Karyavattom, 695581, Kerala, India</p>
+                     <p>FixLab IT Support<br>Federal Bank Building, Vallikavu, Clappana, 690525, Kerala, India</p>
+                 </div>
                 <div class="info-card" data-aos="fade-up">
                     <i class="fas fa-phone"></i>
                     <h3>Phone Numbers</h3>
-                    <p><a href="tel:+919778272227">+91 97782 72227</a><br>
-                    <a href="tel:+914762081156">+91 4762 081156</a></p>
+                                         <p><a href="tel:+919778272227">+91 97782 72227</a><br>
+                     <a href="tel:+918075815183">+91 80758 15183</a><br>
+                     <a href="tel:+914762081156">+91 4762 081156</a></p>
                 </div>
                 <div class="info-card" data-aos="fade-left">
                     <i class="fas fa-envelope"></i>
@@ -198,20 +200,22 @@
                         <li><a href="services/it-support.html">IT Support Services</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Connect With Us</h3>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                    <div class="footer-contact">
-                        <p><i class="fas fa-phone"></i> +91 97782 72227</p>
-                        <p><i class="fas fa-envelope"></i> support@fixlab.co.in</p>
-                    </div>
-                </div>
+                                 <div class="footer-section">
+                     <h3>Contact & Locations</h3>
+                     <div class="footer-contact">
+                         <p><i class="fas fa-phone"></i> +91 97782 72227 / +91 80758 15183</p>
+                         <p><i class="fas fa-envelope"></i> support@fixlab.co.in</p>
+                         <p><i class="fas fa-map-marker-alt"></i> Technopark, Karyavattom, 695581</p>
+                         <p><i class="fas fa-map-marker-alt"></i> Federal Bank Bldg, Vallikavu, 690525</p>
+                     </div>
+                     <div class="social-links">
+                         <a href="#"><i class="fab fa-facebook"></i></a>
+                         <a href="#"><i class="fab fa-twitter"></i></a>
+                         <a href="#"><i class="fab fa-linkedin"></i></a>
+                         <a href="#"><i class="fab fa-instagram"></i></a>
+                         <a href="#"><i class="fab fa-whatsapp"></i></a>
+                     </div>
+                 </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 FIXLAB. All rights reserved.</p>
