--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="who-we-are-content">
                 <div class="who-we-are-text" data-aos="fade-right">
                     <h2 class="section-title">Who We Are?</h2>
-                    <p>FIXLAB is a leading IT support company based in Kollam, Kerala, India. Since our establishment, we have been providing comprehensive IT solutions to businesses across South India.</p>
+                                         <p>FIXLAB is a leading IT support company based in Karyavattom, Kerala, India, with expanded operations in Trivandrum. Since our establishment, we have been providing comprehensive IT solutions to businesses across South India.</p>
                     <p>Our team of certified professionals is dedicated to delivering high-quality IT services that help businesses operate efficiently and securely in today's digital landscape.</p>
                     <p>At FIXLAB, we understand that every business has unique technology needs. That's why we offer customized solutions tailored to your specific requirements, ensuring optimal performance and reliability.</p>
                     <a href="about.html" class="btn btn-primary">Learn More About Us</a>
@@ -244,11 +244,11 @@
                     <h3>Reliable Service</h3>
                     <p>Trusted by businesses</p>
                 </div>
-                <div class="feature" data-aos="fade-up" data-aos-delay="500">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <h3>Local Expertise</h3>
-                    <p>Based in Kollam, Kerala</p>
-                </div>
+                                 <div class="feature" data-aos="fade-up" data-aos-delay="500">
+                     <i class="fas fa-map-marker-alt"></i>
+                     <h3>Local Expertise</h3>
+                     <p>Based in Karyavattom & Trivandrum, Kerala</p>
+                 </div>
                 <div class="feature" data-aos="fade-up" data-aos-delay="600">
                     <i class="fas fa-cogs"></i>
                     <h3>Customized Solutions</h3>
@@ -346,14 +346,16 @@
             <h2 class="section-title" data-aos="fade-up">Contact Us</h2>
             <div class="contact-grid">
                 <div class="contact-info" data-aos="fade-right">
-                    <div class="info-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>123 Business Street, Kollam, Kerala, India</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fas fa-phone"></i>
-                        <p>+91 97782 72227</p>
-                    </div>
+                                         <div class="info-item">
+                         <i class="fas fa-map-marker-alt"></i>
+                         <p>FixLab IT Support, Technopark Back Gate side, Karyavattom, 695581, Kerala, India</p>
+                         <p>FixLab IT Support, Federal Bank Building, Vallikavu, Clappana, 690525, Kerala, India</p>
+                     </div>
+                                         <div class="info-item">
+                         <i class="fas fa-phone"></i>
+                         <p>+91 97782 72227</p>
+                         <p>+91 80758 15183</p>
+                     </div>
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
                         <p>support@fixlab.co.in</p>
@@ -379,10 +381,15 @@
         </div>
     </section>
 
-    <!-- Call Button -->
-    <a href="tel:+919876543210" class="call-button">
-        <i class="fas fa-phone"></i>
-    </a>
+    <!-- Call Button and Login Container -->
+    <div class="floating-buttons">
+        <a href="tel:+919778272227" class="call-button">
+            <i class="fas fa-phone"></i>
+        </a>
+        <a href="login.html" class="login-button">
+            <i class="fas fa-user"></i>
+        </a>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -412,20 +419,22 @@
                         <li><a href="services/it-support.html">IT Support Services</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Connect With Us</h3>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                    <div class="footer-contact">
-                        <p><i class="fas fa-phone"></i> +91 97782 72227</p>
-                        <p><i class="fas fa-envelope"></i> support@fixlab.co.in</p>
-                    </div>
-                </div>
+                                 <div class="footer-section">
+                     <h3>Contact & Locations</h3>
+                     <div class="footer-contact">
+                         <p><i class="fas fa-phone"></i> +91 97782 72227 / +91 80758 15183</p>
+                         <p><i class="fas fa-envelope"></i> support@fixlab.co.in</p>
+                         <p><i class="fas fa-map-marker-alt"></i> Technopark, Karyavattom, 695581</p>
+                         <p><i class="fas fa-map-marker-alt"></i> Federal Bank Bldg, Vallikavu, 690525</p>
+                     </div>
+                     <div class="social-links">
+                         <a href="#"><i class="fab fa-facebook"></i></a>
+                         <a href="#"><i class="fab fa-twitter"></i></a>
+                         <a href="#"><i class="fab fa-linkedin"></i></a>
+                         <a href="#"><i class="fab fa-instagram"></i></a>
+                         <a href="#"><i class="fab fa-whatsapp"></i></a>
+                     </div>
+                 </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 FIXLAB. All rights reserved.</p>
