--- a/services.html
+++ b/services.html
@@ -53,6 +53,7 @@
                 <p>Comprehensive IT Solutions for Your Business</p>
             </div>
         </div>
+        <div class="services-hero-background"></div>
     </section>
 
     <!-- IT Support Section -->
@@ -71,7 +72,7 @@
                     <a href="contact.html" class="btn btn-primary">Get Support</a>
                 </div>
                 <div class="service-image">
-                    <img src="images/services/it-support.jpg" alt="IT Support Services">
+                    <img src="images/services/it-support.svg" alt="IT Support Services">
                 </div>
             </div>
         </div>
@@ -93,7 +94,7 @@
                     <a href="contact.html" class="btn btn-primary">Learn More</a>
                 </div>
                 <div class="service-image">
-                    <img src="images/services/network.jpg" alt="Network Solutions">
+                    <img src="images/services/network.svg" alt="Network Solutions">
                 </div>
             </div>
         </div>
@@ -115,7 +116,7 @@
                     <a href="contact.html" class="btn btn-primary">Secure Your Business</a>
                 </div>
                 <div class="service-image">
-                    <img src="images/services/security.jpg" alt="Security Services">
+                    <img src="images/services/security.svg" alt="Security Services">
                 </div>
             </div>
         </div>
@@ -137,7 +138,7 @@
                     <a href="contact.html" class="btn btn-primary">Consult With Us</a>
                 </div>
                 <div class="service-image">
-                    <img src="images/services/consulting.jpg" alt="IT Consulting">
+                    <img src="images/services/consulting.svg" alt="IT Consulting">
                 </div>
             </div>
         </div>
