--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
                 <p>Your Trusted IT Support Partner</p>
             </div>
         </div>
+        <div class="about-hero-background"></div>
     </section>
 
     <!-- Mission & Vision Section -->
